--- a/src/scss/sections/team.scss
+++ b/src/scss/sections/team.scss
@@ -67,9 +67,11 @@
       bottom: 0;
       left: 0;
       background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 72.32%);
+      border-radius: 0 0 rem(20) rem(20);
     }
 
     & img {
+      border-radius: rem(20);
       object-fit: cover;
     }
 
