--- a/src/scss/sections/diagnostik.scss
+++ b/src/scss/sections/diagnostik.scss
@@ -32,6 +32,7 @@
     @include fit('padding-left', 98, 20, 1);
     @include fit('padding-top', 72, 20, 1);
     @include fit('padding-bottom', 80, 20, 1);
+    padding-right: rem(15);
 
     &::before {
       position: absolute;
