--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -1,6 +1,6 @@
 html {scroll-behavior: smooth; font-size: 100%;}
 body {font-family: 'Assistant';font-weight: 400;color: #fff; background-color: #bd5b6a;}
-.container {max-width: rem(1440);margin: 0 auto; outline: 1px solid #000;}
+.container {max-width: rem(1440);margin: 0 auto;}
 .main{position: relative; z-index: 2; flex: 1 1 auto;}
 .app {
   position: relative;
