rename header btn / remove header link / add link in footer

--- a/src/scss/sections/werwir.scss
+++ b/src/scss/sections/werwir.scss
@@ -56,6 +56,10 @@
     width: rem(250);
     height: rem(103);
 
+    & img {
+      object-fit: contain;
+    }
+
     @include mq(rem(1150)) {
       margin: 0;
     }
