--- a/src/scss/sections/footer.scss
+++ b/src/scss/sections/footer.scss
@@ -35,7 +35,7 @@
     display: flex;
     flex-direction: column;
     gap: rem(15);
-    @include fit('padding-top', 81, 0, 1);
+    @include fit('padding-top', 90, 0, 1);
   }
 }
 
@@ -67,6 +67,7 @@
   &__row {
     display: flex;
     flex-direction: column;
+    gap: rem(5);
     
     &:nth-child(1) {
       padding-bottom: rem(10);
@@ -74,6 +75,7 @@
   }
   &__subtitle {
     font-weight: 700;
+    @include fit('line-height', 26, 20, 1);
     
     &_big {
       @include fit('font-size', 24, 22, 1);
@@ -85,7 +87,7 @@
   }
   &__link {
     @include fit('font-size', 24, 18, 1);
-    @include fit('line-height', 32, 28, 1);
+    @include fit('line-height', 31, 28, 1);
     color: #fff;
 
     &_mail {
