--- a/src/scss/sections/team.scss
+++ b/src/scss/sections/team.scss
@@ -16,17 +16,18 @@
   }
   &__main {
     display: grid;
+    align-items: end;
     justify-content: end;
-    @include fit('gap', 61, 20, 1);
+    @include fit('gap', 67, 20, 1);
     @include fit('padding-top', 202, 50, 1);
     @include fit('padding-bottom', 448, 50, 1);
     @include fit('padding-right', 77, 10, 1);
     padding-left: rem(15);
-    grid-template: minmax(rem(366), auto) / minmax(auto, rem(527)) minmax(auto, rem(426));
+    grid-template: minmax(rem(370), auto) / minmax(auto, rem(485)) minmax(auto, rem(426));
 
     @include laptop {
       padding: rem(20);
-      grid-template: minmax(rem(366), auto) auto / 1fr;
+      grid-template: minmax(rem(300), auto) auto / 1fr;
     }
 
     @include mq(rem(550)) {
@@ -34,13 +35,18 @@
     }
   }
   &__images {
-    display: grid;
+    position: relative;
     height: 100%;
-    @include fit('gap', 27, 15, 1);
-    grid-template: 1fr / 1fr 1fr;
+
+    @include laptop {
+      display: flex;
+      justify-content: center;
+      @include fit('gap', 35, 15, 1);
+    }
 
     @include mq(rem(550)) {
-      grid-template: 1fr 1fr / 1fr;
+      flex-direction: column;
+      align-items: center;
     }
   }
   &__info {
@@ -53,6 +59,31 @@
 }
 
 .images-team {
+  &__item {
+    &:first-child {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: rem(248);
+      height: rem(330);
+    }
+    &:last-child {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      height: rem(269);
+      width: rem(202);
+    }
+
+    @include laptop {
+      &:first-child, &:last-child {
+        position: relative;
+        height: 100%;
+        width: 100%;
+        max-width: rem(248);
+      }
+    }
+  }
   &__img {
     border-radius: rem(20);
     overflow: hidden;
@@ -63,14 +94,32 @@
       z-index: 2;
       content: '';
       width: 100%;
-      height: rem(98);
+      height: rem(74);
       bottom: 0;
       left: 0;
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 72.32%);
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 100%);
       border-radius: 0 0 rem(20) rem(20);
     }
 
-    & img {border-radius: rem(20);}
+    & img {border-radius: rem(20); }
+
+    &_min {
+      &::before {
+        position: absolute;
+        z-index: 2;
+        content: '';
+        width: 100%;
+        height: rem(62);
+        bottom: 0;
+        left: 0;
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 100%);
+        border-radius: 0 0 rem(20) rem(20);
+
+        @include laptop {
+          height: rem(74);
+        }
+      }
+    }
 
     @include laptop {
       max-width: rem(246);
