edit indents sections team, verfugen / edit parallax

--- a/src/scss/sections/team.scss
+++ b/src/scss/sections/team.scss
@@ -1,6 +1,12 @@
 .team {
   &__wrapp {
     position: relative;
+
+    min-height: rem(1018);
+
+    @include mq(rem(550)) {
+      min-height: rem(600);
+    }
   }
   &__bg {
     position: absolute;
