remover section werwir / create vision

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,8 +18,8 @@
 /* menu */
 @import './sections/menu';
 
-/* werwir */
-@import './sections/werwir';
+/* vision */
+@import './sections/vision';
 
 /* diagnostik */
 @import './sections/diagnostik';
