--- a/src/scss/sections/diagnostik.scss
+++ b/src/scss/sections/diagnostik.scss
@@ -1,80 +1,51 @@
 .diagnostik {
-  overflow: hidden;
-  &__main {
-    @include fit('padding-bottom', 252, 50, 1);
-    display: grid;
-    @include fit('gap', 33, 15, 1);
-    grid-template: minmax(rem(634), auto) / minmax(auto, rem(615)) minmax(auto, rem(1028));
+  position: relative;
 
-    @include laptop {
-      padding-left: rem(15);
-      padding-right: rem(15);
-      grid-template: minmax(rem(400), auto) minmax(rem(300), auto) / 1fr;
-    }
+  &::before {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: url('../img/diagnostik/01.png') no-repeat;
+    background-size: cover;
   }
-  &__img {
-    margin: 0 rem(202) 0 rem(-202);
-    
-    & img {
-      border-radius: rem(40);
 
-      @include laptop {object-position: 30% 10%;}
-    }
+  &::after {
+    position: absolute;
+    content: '';
+    width: calc(988px / 1440px * 100%);
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: linear-gradient(90deg, #000000 -52.96%, rgba(0, 0, 0, 0) 50%);
+    opacity: 0.5;
+    background-size: cover;
 
-    @include laptop {margin: 0;}
-  }
-  &__info {
-    position: relative;
-    margin: 0 rem(-32) 0 rem(-202);
-
-    @include fit('padding-left', 98, 20, 1);
-    @include fit('padding-top', 72, 20, 1);
-    @include fit('padding-bottom', 80, 20, 1);
-    padding-right: rem(15);
-
-    &::before {
-      position: absolute;
-      z-index: 0;
-      border-radius: rem(40);
-      content: '';
+    @include tablet {
+      background: linear-gradient(90deg, #fff -52%, rgba(0, 0, 0, 0) 100%);
+      opacity: 1;
       width: 100%;
-      height: 100%;
-      left: 0;
-      top: 0;
-      background: url('../img/diagnostik/03.jpg') no-repeat;
-      background-size: cover;
     }
-
-    @include laptop {margin: 0;}
   }
-}
 
-.info-diagnostik {
-  &__wrapp {
+  &__main {
     position: relative;
-    z-index: 2;
+    z-index: 3;
     color: #000;
+    min-height: rem(543);
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    @include fit('margin-bottom', 123, 50, 1);
+    @include fit('padding-right', 131, 15, 1);
+    padding-left: rem(15);
+  }
+  &__body {
+    max-width: rem(506);
     display: flex;
     flex-direction: column;
-    max-width: rem(546);
-    gap: rem(30);
-  }
-
-  &__btn {
-    max-width: rem(124);
-    background: rgba(207, 96, 113, .1);
-    color: #CF6071;
-
-    & span {
-      &:last-child {
-        padding: rem(3) 0 0 0;
-        font-size: rem(15);
-        color: #E06477;
-      }
-    }
-
-    &:hover {
-      background: rgba(207, 96, 113, .2);
-    }
+    @include fit('gap', 44, 20, 1);
   }
 }
