--- a/src/scss/sections/vision.scss
+++ b/src/scss/sections/vision.scss
@@ -63,7 +63,7 @@
       top: -11px;
       width: calc(100% + 40px);
       height: calc(100% + 50px);
-      background: url('../../img/vision/decore.svg') no-repeat;
+      background: url('../img/vision/decore.svg') no-repeat;
       background-size: contain;
 
       @include laptop {
