rename section diagnostik to behandlung / remove diagnostik.html

--- a/src/scss/sections/behandlung.scss
+++ b/src/scss/sections/behandlung.scss
@@ -1,4 +1,4 @@
-.diagnostik {
+.behandlung {
   position: relative;
 
   &::before {
@@ -8,7 +8,7 @@
     height: 100%;
     left: 0;
     top: 0;
-    background: url('../img/diagnostik/01.png') no-repeat;
+    background: url('../img/behandlung/01.png') no-repeat;
     background-size: cover;
   }
 
