--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,8 +21,8 @@
 /* vision */
 @import './sections/vision';
 
-/* diagnostik */
-@import './sections/diagnostik';
+/* behandlung */
+@import './sections/behandlung';
 
 /* team */
 @import './sections/team';
