create brustdiagnostik section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,9 @@
 /* behandlung */
 @import './sections/behandlung';
 
+/* brustdiagnostik */
+@import './sections/brustdiagnostik';
+
 /* team */
 @import './sections/team';
 
@@ -33,10 +36,7 @@
 /* footer */
 @import './sections/footer';
 
-/* ======== diag-page ======== */
-
-/* diagnostik-page */
-@import './sections/diagnostik-page';
+/* ======== pages ======== */
 
 /* team-page */
 @import './sections/team-page';
