create brustchirurgie section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,6 +27,9 @@
 /* brustdiagnostik */
 @import './sections/brustdiagnostik';
 
+/* brustchirurgie */
+@import './sections/brustchirurgie';
+
 /* team */
 @import './sections/team';
 
