--- a/src/scss/sections/vision.scss
+++ b/src/scss/sections/vision.scss
@@ -3,7 +3,6 @@
 
   &__main {
     padding-top: rem(64);
-    @include fit('padding-bottom', 90, 50, 1);
     margin-right: rem(94);
 
     display: grid;
@@ -66,9 +65,7 @@
       background: url('../img/vision/decore.svg') no-repeat;
       background-size: contain;
 
-      @include laptop {
-        left: 102px;
-      }
+      @include laptop {left: 102px;}
 
       @include mq(rem(523)) {
         @include fit('left', 400, 0, 1);
