--- a/src/scss/sections/brustchirurgie.scss
+++ b/src/scss/sections/brustchirurgie.scss
@@ -1,76 +1,152 @@
 .brustchirurgie {
-  overflow: hidden;
-  position: relative;
-  @include fit('margin-bottom', 124, 50, 1);
+  margin-bottom: rem(228);
 
-  &::before {
-    position: absolute;
-    content: '';
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background: url('../img/brustchirurgie/01.png') no-repeat;
-    background-size: cover;
+  @include laptop {
+    @include fit('margin-bottom', 228, 50, 1);
   }
 
-  &::after {
-    position: absolute;
-    content: '';
-    width: calc(988px / 1440px * 100%);
-    height: 100%;
-    left: 0;
-    top: 0;
-    background: linear-gradient(90deg, #000000 -52.96%, rgba(0, 0, 0, 0) 50%);
-    opacity: 0.5;
-    background-size: cover;
-  }
+  &__top {
+    overflow: hidden;
+    position: relative;
+    min-height: rem(500);
+    padding: rem(90) 0 0 0;
 
+    &::before {
+      position: absolute;
+      content: '';
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      background: url('../img/brustchirurgie/01.png') no-repeat;
+      background-size: cover;
+    }
+
+    &::after {
+      position: absolute;
+      content: '';
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      background: linear-gradient(90deg, #000000 -52.96%, rgba(0, 0, 0, 0) 50%);
+      opacity: 0.5;
+    }
+
+    @include laptop {
+      display: flex;
+      align-items: center;
+      padding: 0;
+    }
+  }
+  &__bottom {
+    position: relative;
+    @include fit('margin-left', -10, 0, 1);
+    max-height: rem(425);
+
+    &::before {
+      position: absolute;
+      content: '';
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      background: #000000;
+      opacity: 0.1;
+      backdrop-filter: blur(4px);
+      border-radius: 0 0 rem(40) rem(40);
+    }
+
+    @include laptop {
+      max-height: unset;
+      // mix-height: rem(425);
+    }
+  }
+}
+
+.top-brustchirurgie {
   &__main {
     display: flex;
     justify-content: end;
-    @include fit('padding-top', 75, 30, 1);
-    @include fit('padding-bottom', 39, 30, 1);
   }
   &__body {
-    background: rgba(0, 0, 0, .3);
-    backdrop-filter: blur(4px);
+    position: relative;
+    z-index: 3;
+
+    display: flex;
+    flex-direction: column;
+    gap: rem(27);
+    max-width: rem(1142);
+
+    color: #000;
+    background: #F3F3F3;
+    opacity: 0.9;
     border-radius: rem(40);
-    margin: 0 rem(-58) 0 rem(58);
 
     @include fit('padding-left', 64, 15, 1);
-    @include fit('padding-top', 31, 15, 1);
-    @include fit('padding-bottom', 43, 15, 1);
-    @include fit('padding-right', 149, 15, 1);
+    @include fit('padding-top', 53, 15, 1);
+    @include fit('padding-bottom', 69, 15, 1);
+    @include fit('padding-right', 414, 15, 1);
 
-    @include tablet {
-      margin: 0;
-      @include fit('margin-left', 58, 15, 1);
+    @include fit('margin-right', -264, 15, 1);
+
+    @include laptop {
+      @include fit('padding-right', 150, 15, 1);
+      margin-right: 0;
+      margin-left: rem(15);
       border-radius: rem(40) 0 0 rem(40);
     }
   }
-  &__row {
-    &:first-child {
-      @include fit('padding-bottom', 27, 20, 1);
-    }
-    &:last-child {
-      display: flex;
-      @include fit('gap', 58, 20, 1);
+}
 
-      @include tablet {
-        flex-direction: column;
-      }
+.bottom-brustchirurgie {
+  &__main {
+    position: relative;
+    z-index: 3;
+    display: flex;
+    justify-content: end;
+
+    @include fit('padding-right', 66, 15, 1);
+    @include fit('padding-left', 25, 15, 1);
+
+    @include laptop {
+      padding-bottom: rem(15);
     }
   }
-  &__col {
-    &:first-child {
-      max-width: rem(366);
+  &__body {
+    @include fit('padding-top', 49, 30, 1);
+    display: grid;
+    gap: rem(32);
+    grid-template: minmax(rem(499), auto) / minmax(auto, rem(500)) minmax(auto, rem(422));
+
+    @include laptop {
+      grid-template: auto minmax(rem(400), auto) / 1fr;
     }
-    &:last-child {
-      max-width: rem(485);
-      display: flex;
-      flex-direction: column;
-      gap: rem(32);
+  }
+  &__text {
+    @include fit('padding-top', 28, 0, 1);
+  }
+  &__image {
+
+    & img {
+      object-fit: contain;
+    }
+
+    &::before {
+      position: absolute;
+      content: '';
+      width: 115%;
+      height: 115%;
+      left: rem(-33);
+      top: rem(22);
+      background: url('../../img/brustchirurgie/decore.svg') no-repeat;
+      background-size: contain;
+    }
+
+    @include laptop {
+      max-width: rem(321);
+      width: 100%;
+      margin: 0 auto;
     }
   }
 }
