edit section behandlung

--- a/src/scss/sections/brustchirurgie.scss
+++ b/src/scss/sections/brustchirurgie.scss
@@ -139,7 +139,7 @@
       height: 115%;
       left: rem(-33);
       top: rem(22);
-      background: url('../../img/brustchirurgie/decore.svg') no-repeat;
+      background: url('../img/brustchirurgie/decore.svg') no-repeat;
       background-size: contain;
     }
 
