--- a/src/scss/sections/behandlung.scss
+++ b/src/scss/sections/behandlung.scss
@@ -4,7 +4,7 @@
   &::before {
     position: absolute;
     content: '';
-    width: 100%;
+    width: calc(752px / 1440px * 100%);
     height: 100%;
     left: 0;
     top: 0;
@@ -12,21 +12,30 @@
     background-size: cover;
   }
 
-  &::after {
-    position: absolute;
-    content: '';
-    width: calc(988px / 1440px * 100%);
-    height: 100%;
-    left: 0;
-    top: 0;
-    background: linear-gradient(90deg, #000000 -52.96%, rgba(0, 0, 0, 0) 50%);
-    opacity: 0.5;
-    background-size: cover;
+  &__wrapp{
 
-    @include tablet {
-      background: linear-gradient(90deg, #fff -52%, rgba(0, 0, 0, 0) 100%);
-      opacity: 1;
+    &::before {
+      position: absolute;
+      content: '';
       width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      background: linear-gradient(90deg, #000000 -52.96%, rgba(0, 0, 0, 0) 50%);
+      opacity: 0.5;
+    }
+  
+    &::after {
+      position: absolute;
+      content: '';
+      width: calc(870px / 1440px * 100%);
+      height: 100%;
+      right: 0;
+      top: 0;
+      background: linear-gradient(270deg, #F3F3F3 76.97%, rgba(243, 243, 243, 0) 148.31%);
+      @include mq(rem(1440)) {
+        @include fit('width', 870, 300, 1);
+      }
     }
   }
 
@@ -34,16 +43,15 @@
     position: relative;
     z-index: 3;
     color: #000;
-    min-height: rem(543);
-    display: flex;
-    justify-content: end;
-    align-items: center;
+    min-height: rem(500);
     @include fit('margin-bottom', 123, 50, 1);
-    @include fit('padding-right', 131, 15, 1);
-    padding-left: rem(15);
+    @include fit('padding-top', 87, 15, 1);
+    @include fit('padding-bottom', 87, 15, 1);
+    @include fit('padding-left', 626, 30, 1);
+    padding-right: rem(15);
   }
   &__body {
-    max-width: rem(506);
+    max-width: rem(648);
     display: flex;
     flex-direction: column;
     @include fit('gap', 44, 20, 1);
