create brustdiagnostik section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,9 @@
 /* behandlung */
 @import './sections/behandlung';
 
+/* brustdiagnostik */
+@import './sections/brustdiagnostik';
+
 /* brustchirurgie */
 @import './sections/brustchirurgie';
 
