--- a/src/scss/sections/team.scss
+++ b/src/scss/sections/team.scss
@@ -1,166 +1,160 @@
 .team {
-  &__wrapp {
-    position: relative;
-    min-height: rem(1018);
-
-    @include mq(rem(550)) {
-      min-height: rem(600);
-    }
-  }
+  position: relative;
+  overflow: hidden;
+  @include fit('margin-bottom', 60, 50, 1);
+  
   &__bg {
     position: absolute;
+    z-index: 0;
     width: 100%;
     height: 100%;
     left: 0;
     top: 0;
-    opacity: 0.8;
-    filter: blur(2px);
-    object-position: 0% 0%;
     object-fit: cover;
-    transition: .1s;
+    object-position: 0% 0%;
   }
   &__main {
-    display: grid;
-    align-items: end;
-    justify-content: end;
-    @include fit('gap', 67, 20, 1);
-    @include fit('padding-bottom', 380, 50, 1);
-    @include fit('padding-right', 77, 10, 1);
-    padding-left: rem(15);
-    grid-template: minmax(rem(370), auto) / minmax(auto, rem(485)) minmax(auto, rem(426));
+    position: relative;
+    min-height: rem(830);
+    @include fit('padding-left', 421, -450, 1);
+    padding-right: rem(15);
+    transition: .3s;
 
     @include laptop {
-      padding: rem(20);
-      grid-template: minmax(rem(300), auto) auto / 1fr;
+      @include fit('padding-left', 521, 15, 1);
     }
 
-    @include mq(rem(550)) {
-      grid-template: minmax(rem(600), auto) auto / 1fr;
+    @include tablet {
+      @include fit('padding-left', 200, 15, 1);
+      padding-bottom: rem(15);
     }
   }
-  &__images {
+  &__top {
+    @include fit('margin-bottom', 41, 30, 1);
+  }
+  &__body {
+    display: grid;
+    grid-template: minmax(rem(539), auto) / minmax(auto, rem(423)) minmax(auto, rem(492));
+
+    @include laptop {
+      grid-template: auto auto / 1fr;
+      gap: rem(30);
+    }
+  }
+  &__doctors {
     position: relative;
-    height: 100%;
 
     @include laptop {
       display: flex;
-      justify-content: center;
-      @include fit('gap', 35, 15, 1);
+      gap: rem(20);
     }
 
-    @include mq(rem(550)) {
+    @include mq(rem(520)) {
       flex-direction: column;
       align-items: center;
     }
   }
   &__info {
     position: relative;
-    z-index: 2;
+    z-index: 3;
     display: flex;
     flex-direction: column;
-    gap: rem(30);
+    gap: rem(34);
+    margin-left: rem(-123);
+    margin-right: rem(123);
+
+    @include laptop {
+      margin: 0;
+      max-width: rem(492);
+    }
   }
 }
 
-.images-team {
+.doctors-team {
   &__item {
-    &:first-child {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: rem(248);
-      height: rem(330);
-    }
-    &:last-child {
-      position: absolute;
-      right: 0;
-      bottom: 0;
-      height: rem(269);
-      width: rem(202);
-    }
-
-    @include laptop {
-      &:first-child, &:last-child {
-        position: relative;
-        height: 100%;
-        width: 100%;
-        max-width: rem(248);
-      }
-    }
-  }
-  &__img {
+    position: absolute;
     border-radius: rem(20);
     overflow: hidden;
-    height: 100%;
 
     &::before {
       position: absolute;
       z-index: 2;
       content: '';
-      width: 100%;
-      height: rem(74);
       bottom: 0;
       left: 0;
+      width: 100%;
       background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 100%);
-      border-radius: 0 0 rem(20) rem(20);
+      border-radius: rem(20);
     }
 
-    & img {border-radius: rem(20); }
+    &:first-child {
+      z-index: 2;
+      left: 0;
+      top: 0;
+      width: rem(248);
+      height: rem(330);
 
-    &_min {
       &::before {
-        position: absolute;
-        z-index: 2;
-        content: '';
-        width: 100%;
-        height: rem(62);
-        bottom: 0;
-        left: 0;
-        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 100%);
-        border-radius: 0 0 rem(20) rem(20);
+        height: rem(74);
+      }
+    }
 
-        @include laptop {
-          height: rem(74);
-        }
+    &:last-child {
+      z-index: 1;
+      right: 0;
+      bottom: 0;
+      width: rem(202);
+      height: rem(269);
+
+      &::before {
+        height: rem(62);
       }
     }
 
     @include laptop {
-      max-width: rem(246);
-      margin: 0 auto;
+      position: relative;
+      left: unset;
+      right: unset;
+      top: unset;
+      bottom: unset;
+
+      &:first-child, &:last-child {
+        max-width: rem(248);
+        width: 100%;
+        height: rem(303);
+      }
     }
   }
-  &__row {
-    position: absolute;
-    z-index: 3;
-    bottom: rem(9);
-    left: 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  &__img {
+    height: 100%;
   }
   &__name {
+    white-space: nowrap;
     font-size: rem(16);
     line-height: rem(21);
     color: #34171B;
+    position: absolute;
+    z-index: 3;
+    left: 50%;
+    bottom: rem(7);
+    transform: translate(-50%, 0);
   }
 }
 
 .info-team {
   &__btn {
-    gap: rem(13);
-    max-width: rem(137);
-    margin-top: rem(18);
-    background: rgba(255, 255, 255, .1);
+    background: rgba(189, 91, 106, .3);
+    gap: rem(10);
+    max-width: rem(155);
+    border-radius: rem(25);
 
-    & span {
-      padding-bottom: rem(4);
+    & span::before {
+      color: #fff;
+      font-size: rem(15);
+    }
 
-      &::before {
-        color: #fff;
-        font-size: rem(15);
-      }
+    &:hover {
+      background: rgba(189, 91, 106, .4);
     }
   }
 }
