--- a/src/scss/sections/brustdiagnostik.scss
+++ b/src/scss/sections/brustdiagnostik.scss
@@ -71,7 +71,7 @@
       height: rem(760);
       left: rem(-10);
       top: rem(-60);
-      background: url('../../img/brustdiagnostik/01.svg') no-repeat;
+      background: url('../img/brustdiagnostik/01.svg') no-repeat;
       background-size: contain;
 
       @include laptop {
@@ -105,7 +105,7 @@
       height: rem(553);
       left: rem(-40);
       top: rem(-28);
-      background: url('../../img/brustdiagnostik/02.svg') no-repeat;
+      background: url('../img/brustdiagnostik/02.svg') no-repeat;
       background-size: contain;
 
       @include laptop {
