--- a/src/scss/sections/vision.scss
+++ b/src/scss/sections/vision.scss
@@ -52,7 +52,8 @@
       width: 100%;
       height: 100%;
       background: #c03649;
-      opacity: 1;
+      opacity: 0.8;
+      -webkit-filter: blur(100px);
       filter: blur(100px);
     }
 
