--- a/src/scss/sections/vision.scss
+++ b/src/scss/sections/vision.scss
@@ -52,9 +52,9 @@
       width: 100%;
       height: 100%;
       background: #c03649;
-      opacity: 0.8;
-      -webkit-filter: blur(100px);
+      // opacity: 1;
       filter: blur(100px);
+      -webkit-filter: blur(100px);
     }
 
     &::after {
