--- a/src/scss/sections/vision.scss
+++ b/src/scss/sections/vision.scss
@@ -51,10 +51,10 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background: #c03649;
-      // opacity: 1;
-      filter: blur(100px);
+      background: rgba(192, 54, 73, .8);
       -webkit-filter: blur(100px);
+      -moz-filter: blur(100px);
+      filter: blur(100px);
     }
 
     &::after {
