--- a/src/scss/sections/vision.scss
+++ b/src/scss/sections/vision.scss
@@ -51,9 +51,8 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background: rgba(192, 54, 73, .8);
+      background-color: rgba(192, 54, 73, .8);
       -webkit-filter: blur(100px);
-      -moz-filter: blur(100px);
       filter: blur(100px);
     }
 
