--- a/src/scss/sections/vision.scss
+++ b/src/scss/sections/vision.scss
@@ -51,8 +51,7 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(192, 54, 73, .8);
-      -webkit-filter: blur(100px);
+      background-color: rgb(192, 54, 73);
       filter: blur(100px);
     }
 
