--- a/src/scss/sections/vision.scss
+++ b/src/scss/sections/vision.scss
@@ -51,7 +51,7 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background-color: rgb(192, 54, 73);
+      background-color: #b4233b;
       filter: blur(100px);
     }
 
