--- a/src/scss/sections/vision.scss
+++ b/src/scss/sections/vision.scss
@@ -51,7 +51,8 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background-color: #b4233b;
+      background-color: rgb(170, 57, 74);
+      -webkit-filter: blur(100px);
       filter: blur(100px);
     }
 
