--- a/src/scss/sections/vision.scss
+++ b/src/scss/sections/vision.scss
@@ -51,8 +51,9 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background-color: #c5364a;
+      background-color: rgb(197, 54, 74);
       -webkit-filter: blur(100px);
+      -moz-filter: blur(100px);
       filter: blur(100px);
     }
 
