--- a/src/scss/sections/vision.scss
+++ b/src/scss/sections/vision.scss
@@ -51,10 +51,9 @@
       top: 0;
       width: 100%;
       height: 100%;
+      background-color: #c5364a;
       filter: blur(100px);
       -webkit-filter: blur(100px);
-      -moz-filter: blur(100px);
-      background-color: rgba(192, 54, 73);
     }
 
     &::after {
