--- a/src/scss/sections/vision.scss
+++ b/src/scss/sections/vision.scss
@@ -46,31 +46,35 @@
 
     &::before {
       position: absolute;
+      z-index: 1;
       content: '';
       left: 0;
       top: 0;
       width: 100%;
       height: 100%;
       background-color: #c5364a;
-      filter: blur(100px);
-      -webkit-filter: blur(100px);
+      -webkit-filter: blur(rem(100));
+      -moz-filter: blur(rem(100));
+      -ms-filter: blur(rem(100));
+      filter: blur(rem(100));
     }
 
     &::after {
-      position: absolute;
-      content: '';
-      @include fit('left', 0, 200, 1);
-      top: -11px;
-      width: calc(100% + 40px);
-      height: calc(100% + 50px);
-      background: url('../img/vision/decore.svg') no-repeat;
-      background-size: contain;
+      // position: absolute;
+      // z-index: 2;
+      // content: '';
+      // @include fit('left', 0, 200, 1);
+      // top: -11px;
+      // width: calc(100% + 40px);
+      // height: calc(100% + 50px);
+      // background: url('../img/vision/decore.svg') no-repeat;
+      // background-size: contain;
 
-      @include laptop {left: 102px;}
+      // @include laptop {left: 102px;}
 
-      @include mq(rem(523)) {
-        @include fit('left', 400, 0, 1);
-      }
+      // @include mq(rem(523)) {
+      //   @include fit('left', 400, 0, 1);
+      // }
     }
   }
 }
