--- a/src/scss/sections/vision.scss
+++ b/src/scss/sections/vision.scss
@@ -52,29 +52,29 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background-color: #c5364a;
-      -webkit-filter: blur(rem(100));
-      -moz-filter: blur(rem(100));
-      -ms-filter: blur(rem(100));
-      filter: blur(rem(100));
+      background: #000;
+      -webkit-filter: blur(100px);
+      -moz-filter: blur(100px);
+      -ms-filter: blur(100px);
+      filter: blur(100px);
     }
 
     &::after {
-      // position: absolute;
-      // z-index: 2;
-      // content: '';
-      // @include fit('left', 0, 200, 1);
-      // top: -11px;
-      // width: calc(100% + 40px);
-      // height: calc(100% + 50px);
-      // background: url('../img/vision/decore.svg') no-repeat;
-      // background-size: contain;
+      position: absolute;
+      z-index: 2;
+      content: '';
+      @include fit('left', 0, 200, 1);
+      top: -11px;
+      width: calc(100% + 40px);
+      height: calc(100% + 50px);
+      background: url('../img/vision/decore.svg') no-repeat;
+      background-size: contain;
 
-      // @include laptop {left: 102px;}
+      @include laptop {left: 102px;}
 
-      // @include mq(rem(523)) {
-      //   @include fit('left', 400, 0, 1);
-      // }
+      @include mq(rem(523)) {
+        @include fit('left', 400, 0, 1);
+      }
     }
   }
 }
