--- a/src/scss/sections/vision.scss
+++ b/src/scss/sections/vision.scss
@@ -52,7 +52,7 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background: #000;
+      background-color: #c5364a;
       -webkit-filter: blur(100px);
       -moz-filter: blur(100px);
       -ms-filter: blur(100px);
