--- a/src/scss/sections/vision.scss
+++ b/src/scss/sections/vision.scss
@@ -46,22 +46,23 @@
 
     &::before {
       position: absolute;
-      z-index: 1;
       content: '';
       left: 0;
       top: 0;
       width: 100%;
       height: 100%;
-      background-color: #c5364a;
+      // background-color: #c5364a;
+      // -webkit-filter: blur(99px);
+      // filter: blur(99px);
+
+      background-color: rgba(192, 54, 73, 0.8);
       -webkit-filter: blur(100px);
       -moz-filter: blur(100px);
-      -ms-filter: blur(100px);
       filter: blur(100px);
     }
 
     &::after {
       position: absolute;
-      z-index: 2;
       content: '';
       @include fit('left', 0, 200, 1);
       top: -11px;
@@ -92,7 +93,6 @@
 .image-vision {
   &__img {
     height: 100%;
-    z-index: 3;
 
     & img {
       object-fit: contain;
