--- a/src/scss/sections/vision.scss
+++ b/src/scss/sections/vision.scss
@@ -51,11 +51,11 @@
       top: 0;
       width: 100%;
       height: 100%;
-      // background-color: #c5364a;
+      background-color: rgba(197, 54, 74, 0.8);
       // -webkit-filter: blur(99px);
       // filter: blur(99px);
 
-      background-color: rgba(192, 54, 73, 0.8);
+      // background-color: rgba(192, 54, 73, 0.8);
       -webkit-filter: blur(100px);
       -moz-filter: blur(100px);
       filter: blur(100px);
