--- a/src/scss/sections/menu.scss
+++ b/src/scss/sections/menu.scss
@@ -138,6 +138,19 @@
     display: flex;
     flex-direction: column;
     gap: rem(22);
+
+    &::before {
+      position: absolute;
+      content: '';
+      left: 50%;
+      top: rem(10);
+      width: 50px;
+      height: 60px;
+
+      transform: translate(-50%);
+      background: url('../../img/BZ.svg') no-repeat;
+      background-size: contain;
+    }
   }
   & li {
     &:last-child {
