--- a/src/scss/sections/menu.scss
+++ b/src/scss/sections/menu.scss
@@ -148,7 +148,7 @@
       height: 60px;
 
       transform: translate(-50%);
-      background: url('../../img/BZ.svg') no-repeat;
+      background: url('../img/BZ.svg') no-repeat;
       background-size: contain;
 
       display: none;
