--- a/src/scss/sections/vision.scss
+++ b/src/scss/sections/vision.scss
@@ -44,23 +44,6 @@
       width: 100%;
     }
 
-    &::before {
-      // position: absolute;
-      // z-index: 3;
-      // opacity: .5;
-      // content: '';
-      // left: 0;
-      // top: 0;
-      // width: 100%;
-      // height: 100%;
-      // background: url('../../img/vision/33.png') no-repeat;
-      // border: 1px solid #000;
-      // background-color: rgba(192, 54, 73, 0.9);
-      // -webkit-filter: blur(100px);
-      // -moz-filter: blur(100px);
-      // filter: blur(100px);
-    }
-
     &::after {
       position: absolute;
       content: '';
@@ -71,10 +54,8 @@
       background: url('../img/vision/decore.svg') no-repeat;
       background-size: contain;
 
-      @include laptop {left: 102px;}
-
-      @include mq(rem(523)) {
-        @include fit('left', 400, 0, 1);
+      @include laptop {
+        @include fit('left', 170, 0, 1);
       }
     }
   }
