jpg, png to webp

--- a/src/scss/sections/behandlung.scss
+++ b/src/scss/sections/behandlung.scss
@@ -8,7 +8,7 @@
     height: 100%;
     left: 0;
     top: 0;
-    background: url('../img/behandlung/01.png') no-repeat;
+    background: url('../img/behandlung/01.webp') no-repeat;
     background-size: cover;
   }
 
