--- a/src/scss/sections/brustchirurgie.scss
+++ b/src/scss/sections/brustchirurgie.scss
@@ -18,7 +18,7 @@
       height: 100%;
       left: 0;
       top: 0;
-      background: url('../img/brustchirurgie/01.png') no-repeat;
+      background: url('../img/brustchirurgie/bg.webp') no-repeat;
       background-size: cover;
     }
 
