--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -1,5 +1,7 @@
 html {scroll-behavior: smooth; font-size: 100%;}
-body {font-family: 'Assistant';font-weight: 400;color: #fff; background-color: #bd5b6a;}
+body {font-family: 'Assistant';font-weight: 400;color: #fff; background-color: #bc5c6a;}
+// #bc5c6a
+// #bd5b6a
 .container {max-width: rem(1440);margin: 0 auto;}
 .main{position: relative; z-index: 2; flex: 1 1 auto;}
 .app {
